added register apis
